first routing2 prototype

--- a/akka-actor/src/main/resources/reference.conf
+++ b/akka-actor/src/main/resources/reference.conf
@@ -100,11 +100,21 @@ akka {
       # Default timeout for typed actor methods with non-void return type
       timeout = 5s
     }
+    
+    # FIXME #3549 document, test, and add all types
+    router.type-mapping {
+      from-code   = "akka.routing2.NoRouter"
+      round-robin = "akka.routing2.RoundRobinRouter"
+      random      = "akka.routing2.RandomRouter"
+    }
 
     deployment {
 
       # deployment id pattern - on the format: /parent/child etc.
       default {
+      
+        # FIXME #3549 temporary
+        routing2 = off
 
         # The id of the dispatcher to use for this actor.
         # If undefined or empty the dispatcher specified in code
