--- a/akka-actor/src/main/resources/reference.conf
+++ b/akka-actor/src/main/resources/reference.conf
@@ -171,6 +171,8 @@ akka {
         # Routers with dynamically resizable number of routees; this feature is
         # enabled by including (parts of) this section in the deployment
         resizer {
+        
+          enabled = off
 
           # The fewest number of routees the router should ever have.
           lower-bound = 1
