Nozzle and Pool, ActorSelectionRoutee

--- a/akka-actor/src/main/resources/reference.conf
+++ b/akka-actor/src/main/resources/reference.conf
@@ -103,9 +103,11 @@ akka {
     
     # FIXME #3549 document, test, and add all types
     router.type-mapping {
-      from-code   = "akka.routing2.NoRouter"
-      round-robin = "akka.routing2.RoundRobinRouter"
-      random      = "akka.routing2.RandomRouter"
+      from-code = "akka.routing2.NoRouter"
+      round-robin-pool = "akka.routing2.RoundRobinPool"
+      round-robin-nozzle = "akka.routing2.RoundRobinNozzle"
+      random-pool = "akka.routing2.RandomPool"
+      random-nozzle = "akka.routing2.RandomNozzle"
     }
 
     deployment {
